tests/invalid_semantic/read_bool.mc
int main() {
    bool ok;
    read(ok);
    return 0;
}
